--- a/R.Rmd
+++ b/R.Rmd
@@ -83,7 +83,7 @@ Commands are sent to R in the bottom-left pane, named "Console". To test
 this, move your cursor to the bottom line, immediately after the prompt sign
 (`>`). Next, type the statement below (note that `#` denotes a comment line; R
 ignores it, so there is no immediate need to type that). To execute, press
-'Enter'.
+`Enter`.
 
 R will execute the command and return the answer back to the console.
 
@@ -301,8 +301,8 @@ library(tidyverse)
 library(emaph)
 ```
 
-Once loaded, you can use the functions and datasets of the packages. Packge
-'emaph' provides dataset `csd`, which contains the data from the 'critical
+Once loaded, you can use the functions and datasets of the packages. Package
+`emaph` provides dataset `csd`, which contains the data from the 'critical
 slowing down'-study [@Kossakowski2017; @Wichers2016], in which a patient
 recorded his mood, for 239 days (see also Chapter \@ref(csd)).
 
@@ -341,7 +341,7 @@ this function, type `?rnorm` in the console.
 This opens the documentation of the rnorm function in the 'Help'-tab, in the
 bottom right pane, from which you learn that that the `rnorm` function accepts
 `mean` and `sd` (standard deviation) as additional parameters, which are 0 and
-1 default, respectively (which explains why `norm(100)`
+1 default, respectively (which explains why `rnorm(100)`
 worked in the previous examples). So, to generate the required numbers, you
 type:
 
@@ -351,7 +351,7 @@ hist(rnorm(1000, mean = 2, sd = 4))
 ```
 
 All functions in R are documented, and this documentation is shown in RStudio's
-Help pane when you prepend ? to the name of the function in the console.
+Help pane when you prepend `?` to the name of the function in the console.
 
 
 ### Using RStudio's global documentation index search
