--- a/book.bib
+++ b/book.bib
@@ -488,7 +488,7 @@ year = {2018}
 
 
 @article{Emerencia2016,
-  author = {Emerencia, Ando C. and {Van Der Krieke}, Lian and Bos, Elisabeth H. and {De Jonge}, Peter and Petkov, Nicolai and Aiello, Marco},
+  author = {Emerencia, Ando C. and {Van der Krieke}, L. and Bos, Elisabeth H. and {De Jonge}, Peter and Petkov, Nicolai and Aiello, Marco},
   doi = {10.1109/JBHI.2015.2402280},
   isbn = {2168-2194 VO - 20},
   issn = {21682194},
@@ -636,19 +636,32 @@ year = {2018}
 }
 
 
-@misc{Frank2000,
-  booktitle = {Biological Psychiatry},
+@article{Frank2007,
+  author = {Frank, Ellen and Swartz, Holly A. and Boland, Elaine},
+  doi = {10.1002/jclp.20371},
+  eprint = {sui},
+  isbn = {1294-8322$\backslash$r1958-5969},
+  issn = {12948322},
+  journal = {Dialogues in Clinical Neuroscience},
+  title = {{Interpersonal and social rhythm therapy: An intervention addressing rhythm dysregulation in bipolar disorder}},
+  year = {2007}
+}
+
+
+@article{Frank2000,
+  author = {Frank, Ellen and Swartz, Holly A. and Kupfer, David J.},
+  journal = {Biological Psychiatry},
   doi = {10.1016/S0006-3223(00)00969-0},
   isbn = {9780470721988},
   issn = {00063223},
   keywords = {Bipolar disorder,Circadian rhythms,Interpersonal psychotherapy,Life events,Mood disorders,Psychotherapy},
   pmid = {11018230},
-  title = {{Interpersonal and social rhythm therapy: Managing the chaos of bipolar disorder}},
+  title = {Interpersonal and social rhythm therapy: Managing the chaos of bipolar disorder},
   year = {2000}
 }
 
-
 @article{Gomersall2016,
+  author = {Gomersall, Sjaan R. and Ng, Norman and Burton, Nicola W. and Pavey, Toby G. and Gilson}, 
   doi = {10.2196/jmir.5531},
   isbn = {1438-8871},
   issn = {14388871},
@@ -940,7 +953,7 @@ year = {1995}
 
 
 @article{VanDerKrieke2016,
-  author = {{Van Der Krieke}, Lian and Jeronimus, Bertus F. and Blaauw, Frank J. and Wanders, Rob B.K. and Emerencia, Ando C. and Schenk, Hendrika M. and Vos, Stijn De and Snippe, Evelien and Wichers, Marieke and Wigman, Johanna T.W. and Bos, Elisabeth H. and Wardenaar, Klaas J. and {De Jonge}, Peter},
+  author = {{Van der Krieke}, L. and Jeronimus, Bertus F. and Blaauw, Frank J. and Wanders, Rob B.K. and Emerencia, Ando C. and Schenk, Hendrika M. and Vos, Stijn De and Snippe, Evelien and Wichers, Marieke and Wigman, Johanna T.W. and Bos, Elisabeth H. and Wardenaar, Klaas J. and {De Jonge}, Peter},
   doi = {10.1002/mpr.1495},
   eprint = {1106.4512},
   isbn = {0022-006X (Print)$\backslash$n0022-006X (Linking)},
@@ -953,7 +966,7 @@ year = {1995}
 }
 
 @article{VanDerKrieke2017,
-  author = {{Van Der Krieke}, Lian and Blaauw, Frank J. and Emerencia, Ando C. and Schenk, Hendrika M. and Slaets, Joris P.J. and Bos, Elisabeth H. and {De Jonge}, Peter and Jeronimus, Bertus F.},
+  author = {{Van der Krieke}, L. and Blaauw, Frank J. and Emerencia, Ando C. and Schenk, Hendrika M. and Slaets, Joris P.J. and Bos, Elisabeth H. and {De Jonge}, Peter and Jeronimus, Bertus F.},
   doi = {10.1097/PSY.0000000000000378},
   isbn = {0000000000000},
   issn = {15347796},
@@ -1600,7 +1613,7 @@ year = {1999}
 
 
 @Article{VanderKrieke2015,
-  author = {{Van der Krieke}, Lian and Emerencia, Ando C. and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and {de Jonge}, Peter}, 
+  author = {{Van der Krieke}, L. and Emerencia, Ando C. and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and {de Jonge}, Peter}, 
   title = {Ecological Momentary Assessments and Automated Time Series Analysis to Promote Tailored Health Care: A Proof-of-Principle Study},
   journal = {JMIR Research Protocols},
   year = {2015},
