--- a/features.Rmd
+++ b/features.Rmd
@@ -281,8 +281,8 @@ to be a pattern in the correlations at later lags: positive and negative
 correlations alternate, in a pattern that seems to reflect periodicity.  
 
 ```{r fig8g, echo = FALSE, out.width = "100%", fig.asp = .3, fig.cap = "Autocorrelation plot of the EMA mood series, revealing periodicity."}
-op = par(mar = c(3, 3, 1, 1))
-acf(e$s, type = "partial", lag.max = 35, main = "")
+op = par(mar = c(4, 4, 1, 1))
+acf(e$s, type = "partial", lag.max = 35, main = "", ylab = "corr", xlab = "lag")
 par(op)
 ```
 
@@ -345,7 +345,7 @@ of `r round(fa$freq[order(fa$spec, decreasing = TRUE)][1], 2)` (about one week).
 This series is *circadian*: mood ratings follow a daily and a weekly
 pattern. This is a common feature of EMA data, because of the circadian
 rhythms in our body and in our environment (our biological clocks, day-night
-cycles, seasons) [@Doherty2018; @Frank2000; @Karatsoreos2014; @VanSomeren2000;
+cycles, seasons) [@Doherty2018; @Frank2000; @Frank2007; @Karatsoreos2014; @VanSomeren2000;
 @Tahmasian2013].
 
 
@@ -376,7 +376,7 @@ you learn how to apply the feature extraction techniques yourself.
 
 
 ```{r csfeaturextraction, echo = TRUE, eval = FALSE}
-## Constructing the simulated EMA time-series
+## Extracting Features from a simulated EMA time-series
 
 # libraries ----------------
 library(ggplot2)
