--- a/packages.bib
+++ b/packages.bib
@@ -7,7 +7,7 @@
 
 @Manual{R-autovarCore,
     title = {autovarCore: Automated Vector Autoregression Models and Networks},
-    author = {Ando Emerencia},
+    author = {Emerencia, Ando C.},
     year = {2018},
     note = {R package version 1.0-4},
     url = {https://CRAN.R-project.org/package=autovarCore},
