--- a/aph-catalogue.Rmd
+++ b/aph-catalogue.Rmd
@@ -74,7 +74,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **APH site** | VUmc, GGZ inGeest, Amsterdam|
 | **Project(s)**   | The main aim of NESDA (the Netherlands study of Depression and Anxiety) is to examine the long-term (eight-year) course and prognosis and co-morbidity of anxiety and depression, to improve quality of care and prevent chronicity [@Penninx2008]. Within the Wave 6 9-year follow-up of the NESDA study (2015 - 2017), a selected sample of NESDA participants with symptoms of depression and healthy controls (n = 384) was invited for an EMA diary/actigraphy study. |
 | **EMA measures** | NESDA EMA study data were collected to explore the dynamic interplay between cognitions, emotions, behavior and environment in daily life of individuals, the feasibility of EMA in participants with affective disorders, and chronotype and diurnal patterns of activity in depressed versus non-depressed participants. EMA participants started within 31 days after the regular NESDA assessments (face-to-face interview and self-report measures). Participants could use their own smartphone (Android / IPhone) if they had sufficient data or access to WIFI for at least 80% of the two-week time period, and could borrow a phone if needed. To record the amount of physical activity during EMA monitoring, participants were also asked to wear an accelerometer (GENEActiv, 30Hz) on their non-dominant wrist, 24 hours a day, for two weeks. Recording started on the evening prior to the first EMA assessment and continued until the morning after the last assessment.|
-|               | Participants were prompted five times a day to complete a self-report questionnaire comprising ~30 items. Items (7-point Likert scale, ranging from 'not [at all]' to 'very') tapped 1) Valance (unpleasant to pleasant) and Arousal (calm to excited), 2) Current state, symptoms of Depression/Anxiety, Physical Condition, 3) Social context, 4) Sleep, 5) daily uplifts/hassles, 6) Activities, and 7) Substance use. Examples of items were: *"I feel down"*, *"I feel cheerful"* and *"Where are you now"* (e.g. at the neighbor's house). In addition, there was an additiona questionnaire inquiring about questionnaire burden and an open-ended question for general comments on circumstances that might influence answers. The items on Valance, Arousal and Current State have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study (@Bennik2015). The other items are based on items from earlier EMA studies, such as the work by Mehl and colleagues (@Mehl2012), van Os and colleagues (@Wichers2012) and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study (@Booij2015) |
+|               | Participants were prompted five times a day to complete a self-report questionnaire comprising ~30 items. Items (7-point Likert scale, ranging from 'not [at all]' to 'very') tapped 1) Valance (unpleasant to pleasant) and Arousal (calm to excited), 2) Current state, symptoms of Depression/Anxiety, Physical Condition, 3) Social context, 4) Sleep, 5) daily uplifts/hassles, 6) Activities, and 7) Substance use. Examples of items were: *"I feel down"*, *"I feel cheerful"* and *"Where are you now"* (e.g. at the neighbor's house). In addition, there was an additional questionnaire inquiring about questionnaire burden and an open-ended question for general comments on circumstances that might influence answers. The items on Valance, Arousal and Current State have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study (@Bennik2015). The other items are based on items from earlier EMA studies, such as the work by Mehl and colleagues (@Mehl2012), van Os and colleagues (@Wichers2012) and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study (@Booij2015) |
 | **Platform used** | RoQua (http://www.roqua.nl/), GENEActiv accelerometer. See also Chapter \@ref(ema-instruments-catalogue)). |
 | **Contact Information** | http://research.vumc.nl/en/persons/brenda-penninx |
 |                         | http://research.vumc.nl/en/persons/femke-lamers   |
