--- a/EMA.Rmd
+++ b/EMA.Rmd
@@ -64,7 +64,7 @@ grid.arrange(g, b, ncol=2, widths = c(100, 500))
 ```
 
 
-```{r fig01b, echo = FALSE, out.width = '100%', fig.asp = .25, fig.align='center', fig.cap='Passive EMA: data are collected automatically, for instance by accelerometers such as the GENEActive actiwatch.'}
+```{r fig01b, echo = FALSE, out.width = '100%', fig.asp = .25, fig.align='center', fig.cap='Passive EMA: data are collected automatically, for instance by accelerometers such as the wrist-worn GENEActive accelerometer '}
 library(jpeg)
 library(grid)
 library(gridExtra)
