--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "Ecological Momentary Assessment in Mental Health Research"
 subtitle: "A Practical Introduction, With Examples in R (1st edition)"
 author: ["Jeroen Ruwaard", "Lisa Kooistra", "Melissa Thong"]
 date: "`r Sys.Date()`"
-cover-image: "images/cover.png"
+cover-image: "images/cover/smallcover.jpg"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
@@ -14,6 +14,8 @@ researchers who are planning Ecological Momentary Assessment (EMA) studies."
 ---
 
 # Preface {-}
+
+`r if (knitr:::is_html_output()) '<img src="./images/cover/smallcover.jpg" width="250" height="375" alt="Cover image" align="right" style="margin: 0 1em 0 1em" />'`
 
 Given known limitations of retrospective self-report questionnaires, such as
 recall bias and poor generalizability of assessment results to real-life
